--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "lotto",
   "version": "1.0.0",
+  "description": "Lotto Template for Chainlink Automation",
   "main": "index.js",
-  "author": "jongregis <jon.gregis@gmail.com>",
+  "author": "LinkPool",
   "license": "MIT",
   "devDependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.2"
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@typechain/hardhat": "^6.1.5",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.2",
+    "hardhat-abi-exporter": "^2.10.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@chainlink/contracts": "^0.5.1",
-    "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.3",
-    "hardhat-deploy": "^0.11.22"
+    "@typechain/ethers-v5": "^10.2.0",
+    "dotenv": "^16.0.3"
   }
 }
